--- a/6week/Makefile
+++ b/6week/Makefile
@@ -6,11 +6,11 @@ DEPS = $(OBJS:.o=.d)
 
 
 
-all: a.out bin/number
+all: shell bin/number
 
 -include $(DEPS)  #這行如果放在 all 之前,修改 .h 檔後 , make只會更新 .o 檔，最終的執行檔不會重新產生
 
-a.out: $(OBJS)
+shell: $(OBJS)
 	gcc -Wall -g -o $@ $^ 
 
 object/%.o: src/%.c
@@ -24,6 +24,6 @@ bin/number: bin/number.cpp
 .PHONY: clean run
 
 clean:
-	rm -f a.out obj/*.o obj/*.d bin/number
+	rm -f shell obj/*.o obj/*.d bin/number
 run:
-	./a.out
+	./shell
