fix different paltform bin

--- a/6week/Makefile
+++ b/6week/Makefile
@@ -6,7 +6,7 @@ DEPS = $(OBJS:.o=.d)
 
 
 
-all: shell bin/number
+all: shell bin/number COPY
 
 -include $(DEPS)  #這行如果放在 all 之前,修改 .h 檔後 , make只會更新 .o 檔，最終的執行檔不會重新產生
 
@@ -19,11 +19,14 @@ object/%.o: src/%.c
 bin/number: bin/number.cpp
 	g++ bin/number.cpp -o bin/number
 
-
+COPY:
+	cp /bin/ls ./bin
+	cp /bin/cat ./bin
+	cp /bin/more ./bin
 
 .PHONY: clean run
 
 clean:
-	rm -f shell obj/*.o obj/*.d bin/number
+	rm -f shell object/*.o object/*.d bin/number bin/ls bin/more bin/cat
 run:
 	./shell
